deploy app to Github Pages

--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
   <base href="https://vladimirm89.github.io/Airways/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>*{box-sizing:border-box}html,body{margin:0;padding:0}body{background-color:var(--bg-main)}:root{--bg-main:#cccccc}</style><link rel="stylesheet" href="styles.0ab64dd226408beb.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.0ab64dd226408beb.css"></noscript></head>
+<style>*{box-sizing:border-box}html,body{margin:0;padding:0}body{display:flex;flex-direction:column;gap:2rem;align-items:center;background-color:var(--bg-main)}:root{--bg-main:#cccccc}</style><link rel="stylesheet" href="styles.14e77de5d7596392.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.14e77de5d7596392.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.62e5881484559106.js" type="module"></script><script src="polyfills.ce3371acbf6ab551.js" type="module"></script><script src="main.56404ec0fe534b11.js" type="module"></script>
+<script src="runtime.62e5881484559106.js" type="module"></script><script src="polyfills.ce3371acbf6ab551.js" type="module"></script><script src="main.5d3ac552c985739d.js" type="module"></script>
 
 </body></html>
